feat: add get endpoints for enums
